guestbook: align issue optimize 2mm issue

--- a/album-photo-app/components/guestbook/styles.scss
+++ b/album-photo-app/components/guestbook/styles.scss
@@ -67,7 +67,6 @@ section {
     & > * {
       display: inline-block;
       line-height: normal;
-      text-align: left;
     }
   }
   .guestbook-page-left,
