--- a/config/styles/variables.scss
+++ b/config/styles/variables.scss
@@ -1,6 +1,6 @@
 :root {
   content: '';
-  --page-width: 297.5mm;
+  --page-width: 297.25936mm;
   --page-height: 210mm;
   --page-color: #214257;
   --page-color-gray: #888;
